some cool stuff

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="timer">
           <div class="options">
             <ul>
-              <li class="active" onclick="optionClick(1)">Pomodoro</li>
-              <li onclick="optionClick(2)">Short Break</li>
-              <li onclick="optionClick(3)">Long Break</li>
+              <li class="active" onclick="optionClick('pomodoro')">Pomodoro</li>
+              <li onclick="optionClick('short-break')">Short Break</li>
+              <li onclick="optionClick('long-break')">Long Break</li>
             </ul>
           </div>
           <div class="time">
